--- a/app/views/accounts/thankyou.html.erb
+++ b/app/views/accounts/thankyou.html.erb
@@ -3,6 +3,6 @@
   <% if (Settings[:require_newacct_activation] == 'true') then %>
   A confirmation e-mail has been sent to your e-mail address with instructions on how to activate your account for use.
   <% else %>
-  You may now login and register for the party!
+  You may now register for the party!
   <% end %>
 </p>
