--- a/app/views/tournaments/create.html.erb
+++ b/app/views/tournaments/create.html.erb
@@ -22,6 +22,10 @@
       <td><b>Max Teams:</b></td>
       <td><%= f.text_field :max_teams, :size => 8 %></td>
     </tr>
+    <tr>
+      <td><b>Team Size:</b></td>
+      <td><%= f.text_field :team_size, :size => 8 %></td>
+    </tr>
   </table>
 <div class="center">
   <%= f.submit 'Add Tournament' %>
