--- a/public/stylesheets/themes/lan69.css
+++ b/public/stylesheets/themes/lan69.css
@@ -31,6 +31,29 @@ a {
     text-decoration: underline;
 }
 
+table {
+	border-width: 1px;
+	border-spacing: ;
+	border-style: inset;
+	border-color: gray;
+	border-collapse: collapse;
+}
+table th {
+	border-width: 1px;
+	padding: 1px;
+	border-style: inset;
+	border-color: gray;
+	-moz-border-radius: ;
+}
+table td {
+	border-width: 1px;
+	padding: 1px;
+	border-style: inset;
+	border-color: gray;
+        padding: 2px;
+	-moz-border-radius: ;
+}
+
 #header {
     width: 756px;
     margin: auto;
@@ -268,8 +291,27 @@ p.error
     color: #CCCCCC;
 }
 
+
 .tournament_team_box {
     text-align: center;
     width: 180px;
     padding-top: 24px;
+}
+
+.team_members_box {
+    width: 180px;
+text-align: center;
+}
+
+.tournament_gamename {
+    color: gray;
+    font-style: italic;
+    font-size: 10px;
+}
+
+.control_panel {
+    margin: 20px 5px 0 5px;
+    padding: 5px;
+    border: thin black;
+    background-color: #063669;
 }
